crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__force_to_top.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
  --> force_to_top.py:1:1
 1 | / import lib6
 2 | | import lib2
 3 | | import lib5
 4 | | import lib1
 5 | | import lib3
 6 | | import lib4
 7 | |
 8 | | import foo
 9 | | import z
10 | | from foo import bar
11 | | from lib1 import foo
12 | | from lib2 import foo
13 | | from lib1.lib2 import foo
14 | | from foo.lib1.bar import baz
15 | | from lib4 import lib1
16 | | from lib5 import lib2
17 | | from lib4 import lib2
18 | | from lib5 import lib1
19 | |
20 | | import lib3.lib4
21 | | import lib3.lib4.lib5
22 | | from lib3.lib4 import foo
23 | | from lib3.lib4.lib5 import foo
   | |______________________________^
help: Organize imports
   |
   - import lib6
1  + import foo
2  + import lib1
3  | import lib2
   - import lib5
   - import lib1
4  | import lib3
5  + import lib3.lib4
6  + import lib3.lib4.lib5
7  | import lib4
   -
   - import foo
8  + import lib5
9  + import lib6
10 | import z
11 | from foo import bar
12 + from foo.lib1.bar import baz
13 | from lib1 import foo
   - from lib2 import foo
14 | from lib1.lib2 import foo
   - from foo.lib1.bar import baz
   - from lib4 import lib1
   - from lib5 import lib2
   - from lib4 import lib2
   - from lib5 import lib1
   -
   - import lib3.lib4
   - import lib3.lib4.lib5
15 + from lib2 import foo
16 | from lib3.lib4 import foo
17 | from lib3.lib4.lib5 import foo
18 + from lib4 import lib1, lib2
19 + from lib5 import lib1, lib2
   |
