crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__insert_empty_lines.pyi.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> insert_empty_lines.pyi:1:1
  |
1 | / import a
2 | | import b
  | |________^
3 |   x = 1
4 |   import os
help: Organize imports
  |
2 | import b
3 +
4 | x = 1
  |

I001 [*] Import block is un-sorted or un-formatted
 --> insert_empty_lines.pyi:4:1
  |
2 |   import b
3 |   x = 1
4 | / import os
5 | | import sys
  | |__________^
6 |   def f():
7 |       pass
help: Organize imports
  |
5 | import sys
6 +
7 | def f():
  |

I001 [*] Import block is un-sorted or un-formatted
  --> insert_empty_lines.pyi:14:1
   |
12 |   class X: pass
13 |   y = 1
14 | / import os
15 | | import sys
   | |__________^
16 |   """Docstring"""
help: Organize imports
   |
15 | import sys
16 +
17 | """Docstring"""
   |
