crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__leading_prefix.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 Import block is un-sorted or un-formatted
 --> leading_prefix.py:1:8
  |
1 |   x = 1; import sys
  |  ________^
2 | | import os
  | |_________^
3 |
4 |   if True:
help: Organize imports

I001 Import block is un-sorted or un-formatted
 --> leading_prefix.py:5:12
  |
4 |   if True:
5 |       x = 1; import sys
  |  ____________^
6 | |     import os
  | |_____________^
7 |
8 |   if True:
help: Organize imports

I001 Import block is un-sorted or un-formatted
  --> leading_prefix.py:10:9
 8 | if True:
 9 |     x = 1; \
10 |         import os
   |         ^^^^^^^^^
11 |
12 | x = 1; \
help: Organize imports

I001 Import block is un-sorted or un-formatted
  --> leading_prefix.py:13:1
   |
12 | x = 1; \
13 | import os
   | ^^^^^^^^^
help: Organize imports
